<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="#c8ead7"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/logo1"
                app:shapeAppearanceOverlay="@style/roundimageview"
                tools:ignore="ImageContrastCheck"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enjoy_shopping_with_us"
                android:textColor="#39404a"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:layout_marginTop="50dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:clickable="false"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textColor="#109743"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="55dp"
                    android:text="@string/setup_a_new_account_in_a_minute"
                    android:textColor="#4A4646" />

                <EditText
                    android:id="@+id/name_register_seller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="90dp"
                    android:autofillHints="name"
                    android:background="@drawable/edit_text_username"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:hint="@string/enter_your_name"
                    android:inputType="textPersonName"
                    android:minHeight="40dp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"/>

                <EditText
                    android:id="@+id/number_register_seller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="140dp"
                    android:autofillHints="name"
                    android:background="@drawable/edit_text_username"
                    android:drawableStart="@drawable/ic_baseline_local_phone_24"
                    android:hint="@string/enter_your_phone"
                    android:inputType="phone"
                    android:minHeight="40dp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"/>

                <EditText
                    android:id="@+id/email_register_seller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="190dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_username"
                    android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="40dp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/password_register_seller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="240dp"
                    android:autofillHints="password"
                    android:background="@drawable/edit_text_username"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:minHeight="40dp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/againpassword_register_seller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="290dp"
                    android:autofillHints="password"
                    android:background="@drawable/edit_text_username"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:hint="@string/enter_password_again"
                    android:inputType="textPassword"
                    android:minHeight="40dp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username_login_seller" />

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="345dp"
                    android:background="@drawable/circles"
                    android:padding="1dp"
                    android:text="@string/Register" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="390dp"
                    android:text="@string/already_have_an_account"
                    android:layout_marginStart="50dp"
                    android:textColor="#4A4646"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/LoginHereSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="205dp"
                    android:layout_marginTop="390dp"
                    android:minHeight="48dp"
                    android:text="@string/login_here"
                    android:textColor="#109743"
                    android:textSize="13sp" />

            </FrameLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="40dp"
                android:adjustViewBounds="true"
                android:src="@drawable/veg" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>




