<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#c8ead7">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start_selling_your_products_online"
        android:textColor="#39404a"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="230dp"
        android:src="@drawable/veg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        app:shapeAppearanceOverlay="@style/roundimageview"
        tools:ignore="ImageContrastCheck" />

    <FrameLayout
        android:layout_width="310dp"
        android:layout_height="410dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="12dp"
            android:clickable="false"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#109743"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="50dp"
            android:text="@string/setup_a_new_account_in_a_minute"
            android:textColor="#4A4646" />

        <EditText
            android:id="@+id/name_register_seller"
            android:layout_width="273dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:autofillHints="name"
            android:background="@drawable/edit_text_username"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/number_register_seller"
            android:layout_width="273dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:autofillHints="phone"
            android:background="@drawable/edit_text_username"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:hint="@string/enter_your_phone"
            android:inputType="phone"
            android:minHeight="40dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_register_seller"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/email_register_seller"
            android:layout_width="273dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="180dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_username"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="40dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_register_seller"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/password_register_seller"
            android:layout_width="273dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="230dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_username"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_login_seller"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/againpassword_register_seller"
            android:layout_width="273dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="280dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_username"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/enter_password_again"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_login_seller"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/register_btn_seller"
            android:layout_width="273dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="335dp"
            android:background="@drawable/circles"
            android:padding="1dp"
            android:text="@string/Register"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="378dp"
            android:text="@string/already_have_an_account"
            android:textColor="#4A4646"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/LoginHereSeller"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginStart="205dp"
            android:layout_marginTop="378dp"
            android:minHeight="48dp"
            android:text="@string/login_here"
            android:textColor="#109743"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>